--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "argi"
-version = "0.1.0"
-description = "The simple cli library"
+version = "0.1.0-beta.1"
+description = "Argument parsing for the future 🚀"
 readme = "README.md"
 license = "MIT OR Apache-2.0"
 authors = ["Owen Griffiths <root@ogriffiths.com>"]
