--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "argi"
-version = "0.1.0-beta.2"
+version = "0.1.0-beta.3"
 description = "Argument parsing for the future 🚀"
 readme = "README.md"
 license = "MIT OR Apache-2.0"
 authors = ["Owen Griffiths <root@ogriffiths.com>"]
+keywords = ["cli", "args", "parser", "argument", "parse"]
 edition = "2018"
